@@ -59,7 +59,7 @@ use Devel::NYTProf::Util qw(
 );
 use Devel::NYTProf::Constants qw(NYTP_SCi_CALLING_SUB);
 
-our $VERSION = '5.03';
+our $VERSION = '5.04';
 
 if ($VERSION != $Devel::NYTProf::Core::VERSION) {
     die "$0 version '$VERSION' doesn't match version '$Devel::NYTProf::Core::VERSION' of $INC{'Devel/NYTProf/Core.pm'}\n";
@@ -1964,6 +1964,10 @@ used by the code. Should not be needed in practice.
 Make your web browser visit the report after it has been generated.
 
 If this doesn't work well for you, try installing the L<Browser::Open> module.
+
+=item -m, --minimal
+
+Don't generate graphviz .dot files or block/sub-level reports.
 
 =item --no-flame
 
